[package]
name          = "mio-st"
version       = "0.2.3"
authors       = ["Carl Lerche <me@carllerche.com>", "Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT"
description   = "Single threaded, lightweight non-blocking IO"
readme        = "README.md"
documentation = "https://docs.rs/mio-st"
homepage      = "https://github.com/Thomasdezeeuw/mio-st"
repository    = "https://github.com/Thomasdezeeuw/mio-st"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
include       = ["Cargo.toml", "src/**/*.rs", "LICENSE"]
edition       = "2018"

[badges]
travis-ci = { repository = "Thomasdezeeuw/mio-st", branch = "master" }

[dependencies]
libc = "0.2.55"
log  = "0.4.6"

[dev-dependencies]
std-logger = { version = "0.3.3", default-features = false }

[features]
default = ["std"]
# Enable things that require the standard library, such as OsQueue.
std = []
# **Experimental** feature that enable user space queues. Works in a no_std
# environment, but requires the alloc crate, which going to be stabilised in
# 1.36.
user_space = []
# Travis' macOS machines don't always meet the set deadline, this disables the
# tests with strict deadlines.
disable_test_deadline = []
