[package]
name          = "gaea"
version       = "0.3.0"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>", "Carl Lerche <me@carllerche.com>"]
license       = "MIT"
description   = "Low-level library to build event driven applications, supporting lightweight non-blocking I/O."
readme        = "README.md"
documentation = "https://docs.rs/gaea"
repository    = "https://github.com/Thomasdezeeuw/gaea"
keywords      = ["io", "async", "non-blocking"]
categories    = ["asynchronous"]
include       = ["Cargo.toml", "src/**/*.rs", "LICENSE"]
edition       = "2018"

[badges]
travis-ci = { repository = "Thomasdezeeuw/gaea", branch = "master" }

[dependencies]
libc = "0.2.58"
log  = "0.4.6"

[dev-dependencies]
std-logger = { version = "0.3.3", default-features = false }

[features]
default = ["std"]
# Enable things that require the standard library, such as OsQueue.
std = []
# **Experimental** feature that enable user space queues. Works in a no_std
# environment, but requires the alloc crate, which going to be stabilised in
# 1.36.
user_space = []
# Travis' macOS machines don't always meet the set deadline, this disables the
# tests with strict deadlines.
disable_test_deadline = []
# Enables features only available in nightly builds of the Rust compiler.
nightly = []
